Fix qmllint crash

Fixes: QTBUG-83915
Change-Id: I26731ebcec6be46602b6acc7562c65b1c9f3e43a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>